# cloud-audio-ai-audacity-addon

./: .env.example  .gitignore  BUILD_INSTALLER.md  CHANGELOG.md  CI_TEST_FIXES.md  COMPLETE_FEATURES.md  FEATURES_SUMMARY.md  FINAL_CI_FIXES.md  GITHUB_SETUP.md  GUI_README.md  INSTALLATION.md  LICENSE  NYQUIST_MIGRATION.md  NYQUIST_PLUGIN_UPDATE.md  PLUGIN_SETUP_FLOW.md  PYTHON38_FIX.md  QUICKSTART.md  README.md  Start GUI.bat  Start GUI.sh  UNICODE_FIX.md  WORKFLOW_FIXES.md  api_key_helper.py  audacity_cloudai.py  create-env-file.ps1  gui_launcher.py  install-nyquist-plugins.ps1  install.bat  install.sh  requirements.txt  setup.py  test-api-helper.ps1
audacity-module/: AudioPreviewDialog.cpp  AudioPreviewDialog.h  CMakeLists.txt  COMPLETE.md  CloudAIEffect.cpp  CloudAIEffect.h  IMPLEMENTATION_STATUS.md  ModCloudAI.cpp  ModCloudAI.h  MusicDialog-part2.txt  MusicDialog.cpp  MusicDialog.h  POLISH_COMPLETE.md  PythonBridge.cpp  PythonBridge.h  QUICK_START.md  README.md  SettingsDialog-part2.txt  SettingsDialog.h  SoundEffectsDialog.cpp  SoundEffectsDialog.h  TranscriptionDialog-complete.cpp  TranscriptionDialog.cpp  TranscriptionDialog.h  TtsDialog.cpp  TtsDialog.h  VoiceBrowserDialog.cpp  VoiceBrowserDialog.h  VoiceIsolationDialog.cpp  VoiceIsolationDialog.h  WINDOWS_BUILD.md  setup-simple.ps1  setup-windows.ps1
docs/: AUDACITY_INTEGRATION.md  CI_CD_SETUP_COMPLETE.md  CONTRIBUTING.md  NYQUIST_PLUGIN_SETUP.md  PROJECT_COMPLETE.md  PROJECT_OVERVIEW.md  README.md  README_EXTENDED.md  RELEASE_GUIDE.md
examples/: README.md  demo.py
installer/: README.md
nyquist-plugins/: README.md  ai-music-generator.ny  (+4 more)
(+38 files in other folders)
